studios fix broken layout

--- a/sites/all/themes/custom/globant_recruiting/less/style.less
+++ b/sites/all/themes/custom/globant_recruiting/less/style.less
@@ -629,6 +629,7 @@ color-EC008C
 		}
 
 		.clients-list {
+			clear: both;
 			display: block;
 			float: none;
 			width: 100%;
